--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,19 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+
+# Node
+# Ignore node_modules directory
+node_modules/
+
+# Ignore lock file (optional, only if you do not want to enforce exact versions)
+package-lock.json
+
+# Ignore npm and yarn debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Ignore editor-specific files (optional)
+.vscode/
