--- a/package.json
+++ b/package.json
@@ -1,5 +1,117 @@
 {
   "devDependencies": {
     "markdownlint-cli": "^0.44.0"
-  }
+  },
+  "name": "io_resolucion-pl",
+  "version": "1.0.0",
+  "description": "Este proyecto tiene como objetivo resolver diferentes problemas de optimización financiera utilizando programación lineal y entera. Se han abordado diversas estrategias para maximizar el rendimiento de la inversión del banco bajo ciertas restricciones, como el presupuesto total y la liquidez mínima requerida. Se han desarrollado los siguientes problemas:",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "dependencies": {
+    "ansi-regex": "^6.1.0",
+    "ansi-styles": "^6.2.1",
+    "argparse": "^2.0.1",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^2.0.1",
+    "character-entities": "^2.0.2",
+    "character-entities-legacy": "^3.0.0",
+    "character-reference-invalid": "^2.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "commander": "^13.1.0",
+    "cross-spawn": "^7.0.6",
+    "debug": "^4.4.0",
+    "decode-named-character-reference": "^1.0.2",
+    "deep-extend": "^0.6.0",
+    "dequal": "^2.0.3",
+    "devlop": "^1.1.0",
+    "eastasianwidth": "^0.2.0",
+    "emoji-regex": "^9.2.2",
+    "entities": "^4.5.0",
+    "foreground-child": "^3.3.0",
+    "glob": "^10.4.5",
+    "ignore": "^7.0.3",
+    "ini": "^4.1.3",
+    "is-alphabetical": "^2.0.1",
+    "is-alphanumerical": "^2.0.1",
+    "is-decimal": "^2.0.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-hexadecimal": "^2.0.1",
+    "isexe": "^2.0.0",
+    "jackspeak": "^3.4.3",
+    "js-yaml": "^4.1.0",
+    "jsonc-parser": "^3.3.1",
+    "jsonpointer": "^5.0.1",
+    "katex": "^0.16.21",
+    "linkify-it": "^5.0.0",
+    "lru-cache": "^10.4.3",
+    "markdown-it": "^14.1.0",
+    "markdownlint": "^0.37.4",
+    "mdurl": "^2.0.0",
+    "micromark": "^4.0.1",
+    "micromark-core-commonmark": "^2.0.2",
+    "micromark-extension-directive": "^3.0.2",
+    "micromark-extension-gfm-autolink-literal": "^2.1.0",
+    "micromark-extension-gfm-footnote": "^2.1.0",
+    "micromark-extension-gfm-table": "^2.1.0",
+    "micromark-extension-math": "^3.1.0",
+    "micromark-factory-destination": "^2.0.1",
+    "micromark-factory-label": "^2.0.1",
+    "micromark-factory-space": "^2.0.1",
+    "micromark-factory-title": "^2.0.1",
+    "micromark-factory-whitespace": "^2.0.1",
+    "micromark-util-character": "^2.1.1",
+    "micromark-util-chunked": "^2.0.1",
+    "micromark-util-classify-character": "^2.0.1",
+    "micromark-util-combine-extensions": "^2.0.1",
+    "micromark-util-decode-numeric-character-reference": "^2.0.2",
+    "micromark-util-encode": "^2.0.1",
+    "micromark-util-html-tag-name": "^2.0.1",
+    "micromark-util-normalize-identifier": "^2.0.1",
+    "micromark-util-resolve-all": "^2.0.1",
+    "micromark-util-sanitize-uri": "^2.0.1",
+    "micromark-util-subtokenize": "^2.0.4",
+    "micromark-util-symbol": "^2.0.1",
+    "micromark-util-types": "^2.0.1",
+    "minimatch": "^9.0.5",
+    "minimist": "^1.2.8",
+    "minipass": "^7.1.2",
+    "ms": "^2.1.3",
+    "package-json-from-dist": "^1.0.1",
+    "parse-entities": "^4.0.2",
+    "path-key": "^3.1.1",
+    "path-scurry": "^1.11.1",
+    "punycode.js": "^2.3.1",
+    "run-con": "^1.3.2",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^4.1.0",
+    "smol-toml": "^1.3.1",
+    "string-width": "^5.1.2",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^7.1.0",
+    "strip-ansi-cjs": "^6.0.1",
+    "strip-json-comments": "^3.1.1",
+    "uc.micro": "^2.1.0",
+    "which": "^2.0.2",
+    "wrap-ansi": "^8.1.0",
+    "wrap-ansi-cjs": "^7.0.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mgonzalz/io_resolucion-PL.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/mgonzalz/io_resolucion-PL/issues"
+  },
+  "homepage": "https://github.com/mgonzalz/io_resolucion-PL#readme"
 }
